# nagyhf

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Doxyfile.bak  Makefile  backend.cpp  backend.hpp  cmake_install.cmake  main  main.cpp  skeleton.html  test_backend.cpp  test_http_response.cpp  valgrind.txt
html/: annotated.html  backend_8cpp.html  backend_8cpp__incl.map  backend_8cpp__incl.md5  backend_8hpp.html  backend_8hpp__dep__incl.map  backend_8hpp__dep__incl.md5  backend_8hpp__incl.map  backend_8hpp__incl.md5  backend_8hpp_source.html  classBackendDataFetcher-members.html  classBackendDataFetcher.html  classBackendDataFetcher__coll__graph.map  classBackendDataFetcher__coll__graph.md5  classBackendDataFetcher__inherit__graph.map  classBackendDataFetcher__inherit__graph.md5  classData-members.html  classData.html  classDataFetcher-members.html  classDataFetcher.html  classDataFetcher__coll__graph.map  classDataFetcher__inherit__graph.map  classDataFetcher__inherit__graph.md5  classData__coll__graph.map  classData__coll__graph.md5  classData__inherit__graph.map  classData__inherit__graph.md5  classHttpResponse-members.html  classHttpResponse.html  classHttpResponse__coll__graph.map  classServer-members.html  classServer.html  classServer__coll__graph.map  classServer__coll__graph.md5  classWeatherData-members.html  classWeatherData.html  classWeatherData__coll__graph.map  classWeatherData__coll__graph.md5  classes.html  files.html  (+18 more)
html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  (+34 more)
latex/: annotated.tex  backend_8cpp.tex  backend_8cpp__incl.md5  backend_8hpp.tex  backend_8hpp__dep__incl.md5  backend_8hpp__incl.md5  classBackendDataFetcher.tex  classBackendDataFetcher__coll__graph.md5  classData.tex  classDataFetcher.tex  classDataFetcher__coll__graph.md5  classDataFetcher__inherit__graph.md5  classData__inherit__graph.md5  classHttpResponse.tex  classHttpResponse__coll__graph.md5  classServer.tex  classWeatherData.tex  classWeatherData__coll__graph.md5  classWeatherData__inherit__graph.md5  files.tex  hierarchy.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
